Rename bulk documents operations.
