# Client.php
@@ -30,7 +30,7 @@ class Client extends \Swiftype\AbstractClient
      *
      * @return array
      */
-    public function asyncBulkCreateOrUpdateDocuments($engineName, $documentTypeId, $documents)
+    public function asyncCreateOrUpdateDocuments($engineName, $documentTypeId, $documents)
     {
         $params = [
             'engine_name' => $engineName,
@@ -38,107 +38,7 @@ class Client extends \Swiftype\AbstractClient
             'documents' => $documents,
         ];
 
-        $endpoint = $this->getEndpoint('AsyncBulkCreateOrUpdateDocuments');
-        $endpoint->setParams($params);
-
-        return $this->performRequest($endpoint);
-    }
-
-    /**
-     * Bulk creation of documents in an engine.
-     *
-     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create
-     *
-     * @param string $engineName     Name of the engine.
-     * @param string $documentTypeId Document type id.
-     * @param array  $documents      List of documents to create.
-     *
-     * @return array
-     */
-    public function bulkCreateDocuments($engineName, $documentTypeId, $documents)
-    {
-        $params = [
-            'engine_name' => $engineName,
-            'document_type_id' => $documentTypeId,
-            'documents' => $documents,
-        ];
-
-        $endpoint = $this->getEndpoint('BulkCreateDocuments');
-        $endpoint->setParams($params);
-
-        return $this->performRequest($endpoint);
-    }
-
-    /**
-     * Bulk creation or update of documents in an engine.
-     *
-     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create_or_update_verbose
-     *
-     * @param string $engineName     Name of the engine.
-     * @param string $documentTypeId Document type id.
-     * @param array  $documents      List of documents to index.
-     *
-     * @return array
-     */
-    public function bulkCreateOrUpdateDocuments($engineName, $documentTypeId, $documents)
-    {
-        $params = [
-            'engine_name' => $engineName,
-            'document_type_id' => $documentTypeId,
-            'documents' => $documents,
-        ];
-
-        $endpoint = $this->getEndpoint('BulkCreateOrUpdateDocuments');
-        $endpoint->setParams($params);
-
-        return $this->performRequest($endpoint);
-    }
-
-    /**
-     * Bulk delete of documents in an engine.
-     *
-     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_destroy
-     *
-     * @param string $engineName     Name of the engine.
-     * @param string $documentTypeId Document type id.
-     * @param array  $documents      List of deleted documents external ids.
-     *
-     * @return array
-     */
-    public function bulkDeleteDocuments($engineName, $documentTypeId, $documents)
-    {
-        $params = [
-            'engine_name' => $engineName,
-            'document_type_id' => $documentTypeId,
-            'documents' => $documents,
-        ];
-
-        $endpoint = $this->getEndpoint('BulkDeleteDocuments');
-        $endpoint->setParams($params);
-
-        return $this->performRequest($endpoint);
-    }
-
-    /**
-     * Bulk update of documents in an engine.
-     *
-     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_update
-     *
-     * @param string $engineName     Name of the engine.
-     * @param string $documentTypeId Document type id.
-     * @param array  $documents      List of documents to update.
-     *
-     * @return array
-     */
-    public function bulkUpdateDocuments($engineName, $documentTypeId, $documents)
-    {
-        $params = [
-            'engine_name' => $engineName,
-            'document_type_id' => $documentTypeId,
-            'documents' => $documents,
-        ];
-
-        $endpoint = $this->getEndpoint('BulkUpdateDocuments');
+        $endpoint = $this->getEndpoint('AsyncCreateOrUpdateDocuments');
         $endpoint->setParams($params);
 
         return $this->performRequest($endpoint);
@@ -195,6 +95,31 @@ class Client extends \Swiftype\AbstractClient
     }
 
     /**
+     * Bulk creation of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to create.
+     *
+     * @return array
+     */
+    public function createDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('CreateDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
      * Create a new API based engine.
      *
      * Documentation: https://swiftype.com/documentation/site-search/engines#create
@@ -245,6 +170,31 @@ class Client extends \Swiftype\AbstractClient
     }
 
     /**
+     * Bulk creation or update of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create_or_update_verbose
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to index.
+     *
+     * @return array
+     */
+    public function createOrUpdateDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('CreateOrUpdateDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
      * Delete a document from the engine.
      *
      * Documentation: https://swiftype.com/documentation/site-search/indexing#delete-external-id
@@ -287,6 +237,31 @@ class Client extends \Swiftype\AbstractClient
         ];
 
         $endpoint = $this->getEndpoint('DeleteDocumentType');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
+     * Bulk delete of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_destroy
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of deleted documents external ids.
+     *
+     * @return array
+     */
+    public function deleteDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('DeleteDocuments');
         $endpoint->setParams($params);
 
         return $this->performRequest($endpoint);
@@ -845,6 +820,31 @@ class Client extends \Swiftype\AbstractClient
         ];
 
         $endpoint = $this->getEndpoint('UpdateDocumentFields');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
+     * Bulk update of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_update
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to update.
+     *
+     * @return array
+     */
+    public function updateDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('UpdateDocuments');
         $endpoint->setParams($params);
 
         return $this->performRequest($endpoint);
