# Endpoint/CreateOrUpdateDocuments.php
@@ -15,18 +15,18 @@ namespace Swiftype\SiteSearch\Endpoint;
  *
  * @author  Aurélien FOUCRET <aurelien.foucret@elastic.co>
  */
-class BulkUpdateDocuments extends \Swiftype\Endpoint\AbstractEndpoint
+class CreateOrUpdateDocuments extends \Swiftype\Endpoint\AbstractEndpoint
 {
     // phpcs:disable
     /**
      * @var string
      */
-    protected $method = 'PUT';
+    protected $method = 'POST';
 
     /**
      * @var string
      */
-    protected $uri = '/engines/{engine_name}/document_types/{document_type_id}/documents/bulk_update';
+    protected $uri = '/engines/{engine_name}/document_types/{document_type_id}/documents/bulk_create_or_update_verbose';
 
     protected $routeParams = ['engine_name', 'document_type_id'];
 
